@@ -1,3 +1,5 @@
+2013-11-29
+	1. Improved simcard_restart() function (optiolnal fields cleanup).
 2013-11-26
 	1. New version simbank-0.6
 	2. Minor bug fixes after testing on SBG4.
